# nVidia-NVML-QT5-6-tools

./: CMakeLists.txt  CodeLibrary.cpp  README.md
SimpleFanControler/: NvControl.pro  Ressources.qrc
SimpleFanController/: Main.cpp  MainWindow.cpp  MainWindow.h  NvControl.ui
Subprocess/: CMakeLists.txt  Main.cpp
